--- a/Newbie/nft-preview-card-component-main/index.html
+++ b/Newbie/nft-preview-card-component-main/index.html
@@ -19,7 +19,48 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
+    <div class="main-container">
+      <div class="nft-card">
+        <div class="img-container">
+          <img src="images/image-equilibrium.jpg" alt="image of nft" />
+        </div>
+        <div class="nft-description">
+          <h3>Equilibrium #3429</h3>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div class="nft-info">
+            <div class="price">
+              <img
+                src="images/icon-ethereum.svg"
+                alt="eth icon"
+                class="eth-icon"
+              />
+              <span>0.041 ETH</span>
+            </div>
+            <div class="date">
+              <img
+                src="images/icon-clock.svg"
+                alt="clock icon"
+                class="clock-icon"
+              />
+              <span>3 days left</span>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="author-container">
+          <img
+            src="images/image-avatar.png"
+            alt="profile image of Jules Wyvern"
+          />
+          <span>Creation of <a href="/" target="_blank">Jules Wyvern</a></span>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+
+<!-- 
+Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
     0.041 ETH 3 days left Creation of Jules Wyvern
 
     <div class="attribution">
@@ -31,5 +72,4 @@
         >Melissa Banoen-Garde</a
       >.
     </div>
-  </body>
-</html>
+ -->
