styled desktop display

--- a/Newbie/nft-preview-card-component-main/index.html
+++ b/Newbie/nft-preview-card-component-main/index.html
@@ -28,7 +28,7 @@
           <h3>Equilibrium #3429</h3>
           <p>Our Equilibrium collection promotes balance and calm.</p>
           <div class="nft-info">
-            <div class="price">
+            <div class="price info-aligned">
               <img
                 src="images/icon-ethereum.svg"
                 alt="eth icon"
@@ -36,7 +36,7 @@
               />
               <span>0.041 ETH</span>
             </div>
-            <div class="date">
+            <div class="date info-aligned">
               <img
                 src="images/icon-clock.svg"
                 alt="clock icon"
