styled the active state

--- a/Newbie/nft-preview-card-component-main/index.html
+++ b/Newbie/nft-preview-card-component-main/index.html
@@ -23,9 +23,18 @@
       <div class="nft-card">
         <div class="img-container">
           <img src="images/image-equilibrium.jpg" alt="image of nft" />
+          <div class="overlay">
+            <img
+              src="images/icon-view.svg"
+              alt="hover view icon"
+              class="icon-view"
+            />
+          </div>
         </div>
         <div class="nft-description">
-          <h3>Equilibrium #3429</h3>
+          <h3>
+            <a href="/"> Equilibrium #3429 </a>
+          </h3>
           <p>Our Equilibrium collection promotes balance and calm.</p>
           <div class="nft-info">
             <div class="price info-aligned">
