added footer & attribution

--- a/Newbie/nft-preview-card-component-main/index.html
+++ b/Newbie/nft-preview-card-component-main/index.html
@@ -64,6 +64,16 @@
           <span>Creation of <a href="/" target="_blank">Jules Wyvern</a></span>
         </div>
       </div>
+
+      <footer>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/neonita" target="_blank"
+          >Melissa Banoen-Garde</a
+        >.
+      </footer>
     </div>
   </body>
 </html>
