--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -18,7 +18,32 @@
     <title>Order summary card</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="order-card-container">
+        <header class="order-card-img-container">
+          <img src="/" alt="illustration of woman vibing to music" />
+        </header>
+        <summary class="order-card-summary">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+          <div class="order-card-summary-annual-plan">
+            <img src="/" alt="duplet note" />
+            <span>
+              <h4>Annual Plan</h4>
+              <p>$59.99/year</p>
+            </span>
+            <a href="/">Change</a>
+          </div>
+          <button>Proceed to Payment</button>
+          <a href="/">Cancel Order</a>
+        </summary>
+      </div>
+    </div>
+  </body>
 </html>
 
 <!-- 
