--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -22,7 +22,10 @@
     <div class="main-container">
       <div class="order-card-container">
         <header class="order-card-img-container">
-          <img src="/" alt="illustration of woman vibing to music" />
+          <img
+            src="images/illustration-hero.svg"
+            alt="illustration of woman vibing to music"
+          />
         </header>
         <summary class="order-card-summary">
           <h1>Order Summary</h1>
@@ -31,7 +34,7 @@
             any device anywhere you like!
           </p>
           <div class="order-card-summary-annual-plan">
-            <img src="/" alt="duplet note" />
+            <img src="images/icon-music.svg" alt="duplet note" />
             <span>
               <h4>Annual Plan</h4>
               <p>$59.99/year</p>
