--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="main-container">
       <div class="order-card-container">
-        <header class="order-card-img-container">
+        <header>
           <img
             src="images/illustration-hero.svg"
             alt="illustration of woman vibing to music"
