--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -34,15 +34,17 @@
             any device anywhere you like!
           </p>
           <div class="order-card-summary-annual-plan">
-            <img src="images/icon-music.svg" alt="duplet note" />
-            <span>
-              <h4>Annual Plan</h4>
-              <p>$59.99/year</p>
-            </span>
+            <div class="annual-plan">
+              <img src="images/icon-music.svg" alt="duplet note" />
+              <span>
+                <h4>Annual Plan</h4>
+                <p>$59.99/year</p>
+              </span>
+            </div>
             <a href="/">Change</a>
           </div>
           <button>Proceed to Payment</button>
-          <a href="/">Cancel Order</a>
+          <a href="/" class="cancel-link">Cancel Order</a>
         </summary>
       </div>
     </div>
