spaced the elements in the summary container according to the design

--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -29,7 +29,7 @@
         </header>
         <summary class="order-card-summary">
           <h1>Order Summary</h1>
-          <p>
+          <p class="description">
             You can now listen to millions of songs, audiobooks, and podcasts on
             any device anywhere you like!
           </p>
