Completed styling the component's desktop display

--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -34,7 +34,7 @@
             any device anywhere you like!
           </p>
           <div class="order-card-summary-annual-plan">
-            <div class="annual-plan">
+            <div class="right">
               <img src="images/icon-music.svg" alt="duplet note" />
               <span>
                 <h4>Annual Plan</h4>
