--- a/Newbie/order-summary-component-main/index.html
+++ b/Newbie/order-summary-component-main/index.html
@@ -47,28 +47,15 @@
           <a href="/" class="cancel-link">Cancel Order</a>
         </summary>
       </div>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/neonita" target="_blank"
+          >Melissa Banoen-Garde</a
+        >.
+      </footer>
     </div>
   </body>
 </html>
-
-<!-- 
-
- Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
- -->
