contstructed the html structure of the component

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -18,7 +18,56 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Stats preview card component (MBG)</title>
   </head>
-  <body></body>
+  <body>
+    <section class="card">
+      <div class="card__cell-left">
+        <header>
+          <h1>Get insights that help your business grow.</h1>
+        </header>
+        <main class="cell-left__text">
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+        </main>
+        <div class="cell-left__stats">
+          <ul>
+            <li>
+              <h3 class="stats__headings">10k+</h3>
+              <p class="stats__stat">companies</p>
+            </li>
+            <li>
+              <h3 class="stats__headings">314</h3>
+              <p class="stats__stat">templates</p>
+            </li>
+            <li>
+              <h3 class="stats__headings">12M+</h3>
+              <p class="stats__stat">queries</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="card__cell-right">
+        <img
+          class="cell-right__img"
+          src="images/image-header-desktop.jpg"
+          alt="employees in office setting"
+        />
+      </div>
+    </section>
+    <footer>
+      Challenge by
+      <a
+        aria-label="Frontend Mentor"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a aria-label="GitHub" href="https://github.com/neonita" target="_blank"
+        >Melissa Banoen-Garde</a
+      >.
+    </footer>
+  </body>
 </html>
 
 <!-- 
