set card layout using css grid

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -20,9 +20,12 @@
   </head>
   <body>
     <section class="card">
-      <div class="card__cell-left">
-        <header>
-          <h1>Get insights that help your business grow.</h1>
+      <div class="card__cell card__cell-left">
+        <header class="cell-left__header">
+          <h1>
+            Get <span class="cell-left__header--highlight">insights</span> that
+            help your business grow.
+          </h1>
         </header>
         <main class="cell-left__text">
           <p>
@@ -47,7 +50,7 @@
           </ul>
         </div>
       </div>
-      <div class="card__cell-right">
+      <div class="card__cell card__cell-right">
         <img
           class="cell-right__img"
           src="images/image-header-desktop.jpg"
@@ -55,15 +58,20 @@
         />
       </div>
     </section>
-    <footer>
+    <footer class="footer">
       Challenge by
       <a
+        class="footer__link"
         aria-label="Frontend Mentor"
         href="https://www.frontendmentor.io?ref=challenge"
         target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a aria-label="GitHub" href="https://github.com/neonita" target="_blank"
+      <a
+        class="footer__link"
+        aria-label="GitHub"
+        href="https://github.com/neonita"
+        target="_blank"
         >Melissa Banoen-Garde</a
       >.
     </footer>
