improve card's image placement according to provided design

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -51,11 +51,7 @@
         </div>
       </div>
       <div class="card__cell card__cell-right">
-        <img
-          class="cell-right__img"
-          src="images/image-header-desktop.jpg"
-          alt="employees in office setting"
-        />
+        <div class="cell-right__img"></div>
       </div>
     </section>
     <footer class="footer">
