--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -21,13 +21,13 @@
   <body>
     <section class="card">
       <div class="card__cell card__cell-left">
-        <header class="cell-left__header">
+        <header role="heading" class="cell-left__header">
           <h1>
             Get <span class="cell-left__header--highlight">insights</span> that
             help your business grow.
           </h1>
         </header>
-        <main class="cell-left__text">
+        <main role="main" class="cell-left__text">
           <p>
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
@@ -36,15 +36,15 @@
         <div class="cell-left__stats">
           <ul>
             <li>
-              <h3 class="stats__headings">10k+</h3>
+              <h1 class="stats__headings">10k+</h1>
               <p class="stats__stat">companies</p>
             </li>
             <li>
-              <h3 class="stats__headings">314</h3>
+              <h1 class="stats__headings">314</h1>
               <p class="stats__stat">templates</p>
             </li>
             <li>
-              <h3 class="stats__headings">12M+</h3>
+              <h1 class="stats__headings">12M+</h1>
               <p class="stats__stat">queries</p>
             </li>
           </ul>
@@ -58,14 +58,14 @@
       Challenge by
       <a
         class="footer__link"
-        aria-label="Frontend Mentor"
+        aria-label="Frontend Mentor website"
         href="https://www.frontendmentor.io?ref=challenge"
         target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a
         class="footer__link"
-        aria-label="GitHub"
+        aria-label="Melissa's GitHub profile"
         href="https://github.com/neonita"
         target="_blank"
         >Melissa Banoen-Garde</a
