correct html file according to FEM report

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -20,20 +20,20 @@
   </head>
   <body>
     <section class="card">
-      <div class="card__cell card__cell-left">
-        <header role="heading" class="cell-left__header">
+      <div role="main" class="card__cell card__cell-left">
+        <header class="cell-left__header">
           <h1>
             Get <span class="cell-left__header--highlight">insights</span> that
             help your business grow.
           </h1>
         </header>
-        <main role="main" class="cell-left__text">
+        <main class="cell-left__text">
           <p>
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
           </p>
         </main>
-        <div class="cell-left__stats">
+        <div role="tablist" class="cell-left__stats">
           <ul>
             <li>
               <h2 class="stats__headings">10k+</h2>
@@ -50,11 +50,11 @@
           </ul>
         </div>
       </div>
-      <div class="card__cell card__cell-right">
+      <div role="img" class="card__cell card__cell-right">
         <div class="cell-right__img"></div>
       </div>
     </section>
-    <footer class="footer">
+    <footer role="contentinfo" class="footer">
       Challenge by
       <a
         class="footer__link"
