replace listbox role with presentation

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -33,7 +33,7 @@
             regarding revenue, customer experience, and overall efficiency.
           </p>
         </section>
-        <div role="listbox" class="cell-left__stats">
+        <div role="presentation" class="cell-left__stats">
           <ul>
             <li>
               <h2 class="stats__headings">10k+</h2>
