remove main landmark

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <main class="card">
-      <div role="main" class="card__cell card__cell-left">
+      <div class="card__cell card__cell-left">
         <header class="cell-left__header">
           <h1>
             Get <span class="cell-left__header--highlight">insights</span> that
