add an alternative text

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -50,7 +50,11 @@
           </ul>
         </div>
       </div>
-      <div role="img" class="card__cell card__cell-right">
+      <div
+        role="img"
+        alt="people in office space"
+        class="card__cell card__cell-right"
+      >
         <div class="cell-right__img"></div>
       </div>
     </main>
