attempt to fix solution report

--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -20,19 +20,19 @@
   </head>
   <body>
     <main class="card">
-      <div class="card__cell card__cell-left">
+      <section class="card__cell card__cell-left">
         <header class="cell-left__header">
           <h1>
             Get <span class="cell-left__header--highlight">insights</span> that
             help your business grow.
           </h1>
         </header>
-        <section class="cell-left__text">
+        <div class="cell-left__text">
           <p>
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
           </p>
-        </section>
+        </div>
         <div role="presentation" class="cell-left__stats">
           <ul>
             <li>
@@ -49,16 +49,12 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div
-        role="img"
-        alt="people in office space"
-        class="card__cell card__cell-right"
-      >
+      </section>
+      <section class="card__cell card__cell-right">
         <div class="cell-right__img"></div>
-      </div>
+      </section>
     </main>
-    <footer role="contentinfo" class="footer">
+    <footer class="footer">
       Challenge by
       <a
         class="footer__link"
