--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -27,12 +27,10 @@
             help your business grow.
           </h1>
         </header>
-        <div class="cell-left__text">
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
-        </div>
+        <p class="cell-left__text">
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
         <div role="presentation" class="cell-left__stats">
           <ul>
             <li>
