--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -49,7 +49,7 @@
         </div>
       </section>
       <section class="card__cell card__cell-right">
-        <div class="cell-right__img"></div>
+        <h1 class="cell-right__img"></h1>
       </section>
     </main>
     <footer class="footer">
