--- a/Newbie/stats-preview-card-component-main/index.html
+++ b/Newbie/stats-preview-card-component-main/index.html
@@ -48,9 +48,9 @@
           </ul>
         </div>
       </section>
-      <section class="card__cell card__cell-right">
+      <aside class="card__cell card__cell-right">
         <div class="cell-right__img"></div>
-      </section>
+      </aside>
     </main>
     <footer class="footer">
       Challenge by
