--- a/Newbie/3-column-preview-card-component-main/index.html
+++ b/Newbie/3-column-preview-card-component-main/index.html
@@ -12,26 +12,69 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | 3-column preview card component (MBG)</title>
   </head>
-  <body></body>
+  <body>
+    <main class="grid">
+      <section class="grid__cell">
+        <div class="card">
+          <img
+            src="images/icon-sedans.svg"
+            alt="icon illustration of a Sedan vehicle"
+            class="card__icon"
+          />
+          <h1 class="card__title">Sedans</h1>
+          <p class="card__description">
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <button class="card__btn">Learn More</button>
+        </div>
+      </section>
+      <section class="grid__cell">
+        <div class="card">
+          <img
+            src="images/icon-suvs.svg"
+            alt="icon illustration of an SUV vehicle"
+            class="card__icon"
+          />
+          <h1 class="card__title">SUVs</h1>
+          <p class="card__description">
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button class="card__btn">Learn More</button>
+        </div>
+      </section>
+      <section class="grid__cell">
+        <div class="card">
+          <img
+            src="images/icon-luxury.svg"
+            alt="icon illustration of a luxury vehicle"
+            class="card__icon"
+          />
+          <h1 class="card__title">Luxury</h1>
+          <p class="card__description">
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button class="card__btn">Learn More</button>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      Challenge by
+      <a
+        class="footer__link"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        aria-label="Frontend Mentor website"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        class="footer__link"
+        href="https://github.com/neonita"
+        aria-label="Melissa's GitHub profile"
+        >Melissa Banoen-Garde</a
+      >.
+    </footer>
+  </body>
 </html>
-
-<!-- 
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
- -->
