set class names for individual sub-cards

--- a/Newbie/3-column-preview-card-component-main/index.html
+++ b/Newbie/3-column-preview-card-component-main/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="grid">
-      <section class="grid__cell">
+      <section class="grid__cell grid__cell--one">
         <div class="card">
           <img
             src="images/icon-sedans.svg"
@@ -29,7 +29,7 @@
           <button class="card__btn">Learn More</button>
         </div>
       </section>
-      <section class="grid__cell">
+      <section class="grid__cell grid__cell--two">
         <div class="card">
           <img
             src="images/icon-suvs.svg"
@@ -44,7 +44,7 @@
           <button class="card__btn">Learn More</button>
         </div>
       </section>
-      <section class="grid__cell">
+      <section class="grid__cell grid__cell--three">
         <div class="card">
           <img
             src="images/icon-luxury.svg"
