layout and style individual sub-cards

--- a/Newbie/3-column-preview-card-component-main/index.html
+++ b/Newbie/3-column-preview-card-component-main/index.html
@@ -26,7 +26,7 @@
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <button class="card__btn">Learn More</button>
+          <button class="card__btn card__btn--one">Learn More</button>
         </div>
       </section>
       <section class="grid__cell grid__cell--two">
@@ -41,7 +41,7 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <button class="card__btn">Learn More</button>
+          <button class="card__btn card__btn--two">Learn More</button>
         </div>
       </section>
       <section class="grid__cell grid__cell--three">
@@ -56,7 +56,7 @@
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <button class="card__btn">Learn More</button>
+          <button class="card__btn card__btn--three">Learn More</button>
         </div>
       </section>
     </main>
