--- a/Newbie/3-column-preview-card-component-main/index.html
+++ b/Newbie/3-column-preview-card-component-main/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <main class="grid">
+      <h1 class="sr-only"></h1>
       <section class="grid__cell grid__cell--one">
         <div class="card">
           <img
@@ -21,7 +22,7 @@
             alt="icon illustration of a Sedan vehicle"
             class="card__icon"
           />
-          <h1 class="card__title">Sedans</h1>
+          <h2 class="card__title">Sedans</h2>
           <p class="card__description">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
@@ -36,7 +37,7 @@
             alt="icon illustration of an SUV vehicle"
             class="card__icon"
           />
-          <h1 class="card__title">SUVs</h1>
+          <h2 class="card__title">SUVs</h2>
           <p class="card__description">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
@@ -51,7 +52,7 @@
             alt="icon illustration of a luxury vehicle"
             class="card__icon"
           />
-          <h1 class="card__title">Luxury</h1>
+          <h2 class="card__title">Luxury</h2>
           <p class="card__description">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
