add content in sr-only h1

--- a/Newbie/3-column-preview-card-component-main/index.html
+++ b/Newbie/3-column-preview-card-component-main/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="grid">
-      <h1 class="sr-only"></h1>
+      <h1 class="sr-only">3-column preview card component</h1>
       <section class="grid__cell grid__cell--one">
         <div class="card">
           <img
