Construct HTML structure

--- a/Newbie/profile-card-component-main/index.html
+++ b/Newbie/profile-card-component-main/index.html
@@ -13,7 +13,38 @@
     <title>Frontend Mentor | Profile card component</title>
     <link rel="stylesheet" href="css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <main class="card">
+        <div class="card__pattern"></div>
+        <article class="profile">
+          <img
+            src="images/image-victor.jpg"
+            alt="profile picture of user"
+            class="profile__img"
+          />
+          <h1 class="profile__name">Victor Crest</h1>
+          <span class="profile__age">26</span>
+          <p class="profile__location">London</p>
+          <hr />
+          <ul class="profile__stats">
+            <li class="profile__value">
+              <h2>80K</h2>
+              <p>Followers</p>
+            </li>
+            <li class="profile__value">
+              <h2>803K</h2>
+              <p>Likes</p>
+            </li>
+            <li class="profile__value">
+              <h2>1.4K</h2>
+              <p>Photos</p>
+            </li>
+          </ul>
+        </article>
+      </main>
+    </div>
+  </body>
 </html>
 
 <!-- 
