set desktop background images and color

--- a/Newbie/profile-card-component-main/index.html
+++ b/Newbie/profile-card-component-main/index.html
@@ -43,6 +43,12 @@
           </ul>
         </article>
       </main>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/neonita">Melissa Banoen-Garde</a>.
+      </footer>
     </div>
   </body>
 </html>
