set respective colors and font size to profile's text-information

--- a/Newbie/profile-card-component-main/index.html
+++ b/Newbie/profile-card-component-main/index.html
@@ -23,8 +23,10 @@
             alt="profile picture of user"
             class="profile__img"
           />
-          <h1 class="profile__name">Victor Crest</h1>
-          <span class="profile__age">26</span>
+          <h1 class="profile__name">
+            Victor Crest
+            <span class="profile__age">26</span>
+          </h1>
           <p class="profile__location">London</p>
           <hr />
           <ul class="profile__stats">
