style header using flex

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
   </head>
   <body>
@@ -21,11 +21,11 @@
         </h1>
         <nav class="header__nav">
           <ul>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Features</a>
+            <li class="item">
+              <a href="#" class="item__link">Features</a>
             </li>
-            <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
+            <li class="item"><a href="#" class="item__link">Team</a></li>
+            <li class="item"><a href="#" class="item__link">Sign In</a></li>
           </ul>
         </nav>
       </header>
