set basic layout of midway second

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -87,8 +87,10 @@
               alt="Kyle Burton's avatar"
               class="avatar"
             />
-            <h5 class="name">Kyle Burton</h5>
-            <p class="title">Founder & CEO, Huddle</p>
+            <div class="avatar-title">
+              <h5>Kyle Burton</h5>
+              <p>Founder & CEO, Huddle</p>
+            </div>
           </div>
         </div>
       </article>
