reset and restarting

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -13,167 +13,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
   </head>
-  <body>
-    <section>
-      <header class="header">
-        <h1 class="header__logo">
-          <img src="images/logo.svg" alt="Fylo logo" />
-        </h1>
-        <nav class="header__nav">
-          <ul>
-            <li class="item">
-              <a href="#" class="item__link">Features</a>
-            </li>
-            <li class="item"><a href="#" class="item__link">Team</a></li>
-            <li class="item"><a href="#" class="item__link">Sign In</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main class="hero">
-        <article class="hero__left">
-          <h2 class="title">
-            All your files in one secure location, accessible anywhere.
-          </h2>
-          <p class="para">
-            Fylo stores your most important files in one secure location. Access
-            them wherever you need, share and collaborate with friends, family,
-            and co-workers.
-          </p>
-          <form action="#!" class="form">
-            <input
-              type="email"
-              name="email"
-              placeholder="Enter your email..."
-              class="form__email"
-            />
-            <input type="submit" value="Get Started" class="form__btn" />
-          </form>
-        </article>
-        <div class="hero__right">
-          <img src="images/illustration-1.svg" alt="an illustration" />
-        </div>
-      </main>
-    </section>
-
-    <section class="midway">
-      <article class="midway__left">
-        <h2 class="title">Stay productive, wherever you are</h2>
-        <p class="para">
-          Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs.
-        </p>
-        <p class="para">
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required!
-        </p>
-        <a href="#" class="link"
-          >See how Fylo works
-          <span><img src="images/icon-arrow.svg" alt="arrow icon" /></span
-        ></a>
-        <div class="card">
-          <img
-            src="images/icon-quotes.svg"
-            alt="quotes icon"
-            class="card__icon"
-          />
-          <p class="card__p">
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="card__source">
-            <img
-              src="images/avatar-testimonial.jpg"
-              alt="Kyle Burton's avatar"
-              class="avatar"
-            />
-            <div class="avatar-title">
-              <h5>Kyle Burton</h5>
-              <p>Founder & CEO, Huddle</p>
-            </div>
-          </div>
-        </div>
-      </article>
-      <div class="midway__right">
-        <img src="images/illustration-2.svg" alt="an illustration" />
-      </div>
-    </section>
-
-    <section class="cta">
-      <article class="cta__left">
-        <h2 class="title">Get early access today</h2>
-        <p class="para">
-          It only takes a minute to sign up and our free starter tier is
-          extremely generous. If you have any questions, our support team would
-          be happy to help you.
-        </p>
-      </article>
-      <form action="#!" class="form">
-        <input
-          type="text"
-          placeholder="email@example.com"
-          class="form__email"
-        />
-        <input type="submit" value="Get Started For Free" class="form__btn" />
-      </form>
-    </section>
-
-    <footer class="footer">
-      <div class="footer__left">
-        <img src="images/logo.svg" alt="logo" class="logo" />
-        <ul>
-          <li class="contact">
-            <img
-              src="images/icon-phone.svg"
-              alt="phone icon"
-              class="contact__icon"
-            />
-            <span class="contact__info"> Phone: +1-543-123-4567 </span>
-          </li>
-          <li class="contact">
-            <img
-              src="images/icon-email.svg"
-              alt="gmail icon"
-              class="contact__icon"
-            />
-            <span class="contact__info"> example@fylo.com </span>
-          </li>
-        </ul>
-      </div>
-      <div class="footer__center">
-        <ul class="items">
-          <li class="links">About Us</li>
-          <li class="links">Jobs</li>
-          <li class="links">Press</li>
-          <li class="links">Blog</li>
-        </ul>
-        <ul class="items">
-          <li class="links">Contact Us</li>
-          <li class="links">Terms</li>
-          <li class="links">Privacy</li>
-        </ul>
-      </div>
-      <div class="footer__right">
-        <ul>
-          <li class="socials">
-            <a href="#" class="socials__link">
-              <img src="images/facebook-icon.svg" alt="Facebook icon" />
-            </a>
-          </li>
-          <li class="socials">
-            <a href="#" class="socials__link">
-              <img src="images/twitter-logo.svg" alt="Twitter icon" />
-            </a>
-          </li>
-          <li class="socials">
-            <a href="#" class="socials__link">
-              <img src="images/instagram-logo.svg" alt="Instagram icon" />
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
 
 <!-- 
