--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="h1">Hello World</h1>
+  </body>
 </html>
 
 <!-- 
