Create mixins scss file to set reiterative stylings of the website's theme

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -14,7 +14,22 @@
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
   </head>
   <body>
-    <h1 class="h1">Hello World</h1>
+    <div class="scene">
+      <h2>
+        Lorem ipsum dolor sit amet. Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Perferendis similique dolor cum nisi soluta dolorum
+        aliquid repellat at sequi, ullam porro debitis provident asperiores
+        unde, veniam inventore autem temporibus tempore!
+      </h2>
+      <h3>Lorem ipsum dolor sit amet.</h3>
+      <input type="submit" value="Get Started" class="btn" />
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias doloribus
+        unde ipsa, ad quam possimus temporibus id. Voluptas nesciunt, assumenda
+        error facilis dolore est repellendus hic perferendis non enim!
+        Voluptatum?
+      </p>
+    </div>
   </body>
 </html>
 
