Construct CTA and footer html structure

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -97,6 +97,68 @@
         />
       </aside>
     </section>
+
+    <section class="scene cta">
+      <article class="cta__content"></article>
+      <aside class="cta__email">
+        <form action="!#" class="email">
+          <input
+            type="email"
+            placeholder="email@example.com"
+            class="email__input"
+          />
+          <input
+            type="submit"
+            value="Get Started For Free"
+            class="email__btn"
+          />
+        </form>
+      </aside>
+    </section>
+
+    <footer class="footer">
+      <section class="footer__contact contact">
+        <img src="images/logo.svg" alt="Fylo logo" class="contact__logo" />
+        <ul class="contact__details">
+          <li class="contact__list">
+            <img src="images/icon-phone.svg" alt="phone icon" />
+            <span>Phone: +1-543-123-4567</span>
+          </li>
+          <li class="contact__list">
+            <img src="images/icon-email.svg" alt="email icon" />
+            <span>example@fylo.com</span>
+          </li>
+        </ul>
+      </section>
+      <section class="footer__links links">
+        <ul class="links__list">
+          <li class="list__item">
+            <a href="#" class="list__link">About Us</a>
+          </li>
+          <li class="list__item">
+            <a href="#" class="list__link">Jobs</a>
+          </li>
+          <li class="list__item">
+            <a href="#" class="list__link">Press</a>
+          </li>
+          <li class="list__item">
+            <a href="#" class="list__link">Blog</a>
+          </li>
+        </ul>
+        <ul class="links__list">
+          <li class="list__item">
+            <a href="#" class="list__link">Contact Us</a>
+          </li>
+          <li class="list__item">
+            <a href="#" class="list__link">Terms</a>
+          </li>
+          <li class="list__item">
+            <a href="#" class="list__link">Privacy</a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer__socials socials"></section>
+    </footer>
   </body>
 </html>
 
