Add content of CTA section and style scene-class elements

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -99,7 +99,14 @@
     </section>
 
     <section class="scene cta">
-      <article class="cta__content"></article>
+      <article class="cta__content content">
+        <h2 class="content__title">Get early access today</h2>
+        <p class="content__text">
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+      </article>
       <aside class="cta__email">
         <form action="!#" class="email">
           <input
