Style and layout hero section of desktop version

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -51,7 +51,7 @@
       </aside>
     </section>
 
-    <section class="scene">
+    <section class="scene scene-2">
       <article class="content">
         <h2 class="content__title">Stay productive, wherever you are</h2>
         <p class="content__text">
