Style and layout article elements of CTA section

--- a/Junior/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/index.html
@@ -98,7 +98,7 @@
       </aside>
     </section>
 
-    <section class="scene cta">
+    <section class="cta">
       <article class="cta__content content">
         <h2 class="content__title">Get early access today</h2>
         <p class="content__text">
