--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -14,21 +14,79 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
-    Learn to code by watching others See how experienced developers solve
-    problems in real-time. Watching scripted tutorials is great, but
-    understanding how developers think is invaluable. Try it free 7 days then
-    $20/mo. thereafter First Name Last Name Email Address Password Claim your
-    free trial By clicking the button, you are agreeing to our Terms and
-    Services
+    <section class="container">
+      <aside class="info">
+        <h1 class="info">Learn to code by watching others</h1>
+        <p class="info__description">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </aside>
 
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
+      <main class="cta">
+        <div class="cta__detail">
+          Try it free 7 days then $20/mo. thereafter
+        </div>
+
+        <form action="/" class="form">
+          <!-- First Name -->
+          <div class="form__input">
+            <input type="text" class="first-name" placeholder="First Name" />
+            <span class="form__icon">
+              <img src="images/icon-error.svg" alt="error icon" />
+            </span>
+            <small class="form__errormsg">
+              <!-- error message plugged in here -->
+            </small>
+          </div>
+
+          <!-- Last Name -->
+          <div class="form__input">
+            <input type="text" class="last-name" placeholder="Last Name" />
+            <span class="form__icon">
+              <img src="images/icon-error.svg" alt="error icon" />
+            </span>
+            <small class="form__errormsg">
+              <!-- error message plugged in here -->
+            </small>
+          </div>
+
+          <!-- Email Address -->
+          <div class="form__input">
+            <input type="text" class="email" placeholder="Email Address" />
+            <span class="form__icon">
+              <img src="images/icon-error.svg" alt="error icon" />
+            </span>
+            <small class="form__errormsg">
+              <!-- error message plugged in here -->
+            </small>
+          </div>
+
+          <!-- Password -->
+          <div class="form__input">
+            <input type="text" class="password" placeholder="Password" />
+            <span class="form__icon">
+              <img src="images/icon-error.svg" alt="error icon" />
+            </span>
+            <small class="form__errormsg">
+              <!-- error message plugged in here -->
+            </small>
+          </div>
+
+          <!-- Submit btn -->
+          <input
+            type="button"
+            class="form__btn"
+            value="Claim your free trial"
+          />
+
+          <small class="form__ts">
+            By clicking the button, you are agreeing to our Terms and Services
+          </small>
+        </form>
+      </main>
+    </section>
   </body>
 </html>
 
@@ -46,7 +104,7 @@
     Last Name 
     Email Address 
     Password 
-    
+
     Claim your free trial 
     
     By clicking the button, you are agreeing to our Terms and
