Set font size of mobile content's title and description

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="container">
       <aside class="info">
-        <h1 class="info">Learn to code by watching others</h1>
+        <h1 class="info__title">Learn to code by watching others</h1>
         <p class="info__description">
           See how experienced developers solve problems in real-time. Watching
           scripted tutorials is great, but understanding how developers think is
