--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -26,7 +26,7 @@
 
       <main class="cta">
         <div class="cta__detail">
-          Try it free 7 days then $20/mo. thereafter
+          <span class="bold">Try it free 7</span> days then $20/mo. thereafter
         </div>
 
         <form action="/" class="form">
@@ -82,7 +82,8 @@
           />
 
           <small class="form__ts">
-            By clicking the button, you are agreeing to our Terms and Services
+            By clicking the button, you are agreeing to our
+            <a href="#" class="bold theme-red">Terms and Services</a>
           </small>
         </form>
       </main>
