--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -87,6 +87,16 @@
           </small>
         </form>
       </main>
+
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://github.com/neonita" target="_blank">Neonita</a>.
+        </p>
+      </footer>
     </section>
   </body>
 </html>
